--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@ionic/vue": "^8.4.0",
     "@mdi/font": "^7.4.47",
+    "@vueuse/core": "^11.2.0",
+    "axios": "^1.7.7",
     "gsap": "^3.12.5",
     "pinia": "^2.2.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "v3-infinite-loading": "^1.3.2",
+    "vs-vue3-select": "^1.3.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-search-input": "^1.1.16",
